--- a/www/_locales/th/messages.json
+++ b/www/_locales/th/messages.json
@@ -1,6 +1,6 @@
 {
   "appDescription": {
-    "description": "description",
-    "message": "ส่งข้อความฟรี ทุกที่ ทุกเวลา"
+    "message": "ส่งข้อความฟรี ทุกที่ ทุกเวลา",
+    "description": "description"
   }
 }
