--- a/www/_locales/en/messages.json
+++ b/www/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
-  "appDescription": {
-    "description": "description",
-    "message": "Free messaging any time, anywhere"
+  "appDescription" : {
+    "message": "Free messaging any time, anywhere",
+    "description" : "description"
   }
 }
