--- a/www/_locales/ja/messages.json
+++ b/www/_locales/ja/messages.json
@@ -1,6 +1,6 @@
 {
   "appDescription": {
-    "description": "description",
-    "message": "いつでも、どこでも、無料でメッセージを送れる"
+    "message": "いつでも、どこでも、無料でメッセージを送れる",
+    "description": "description"
   }
 }
