--- a/www/_locales/zh_TW/messages.json
+++ b/www/_locales/zh_TW/messages.json
@@ -1,6 +1,6 @@
 {
   "appDescription": {
-    "description": "description",
-    "message": "隨時隨地免費傳送訊息"
+    "message": "隨時隨地免費傳送訊息",
+    "description": "description"
   }
 }
